<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="io.github.t3r1jj.pbmap.about.AboutActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/name_app"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <ImageButton
                android:id="@+id/about_icon"
                android:layout_width="@dimen/about_icon_size"
                android:layout_height="@dimen/about_icon_size"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/name_app"
                android:scaleType="center"
                android:src="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/about_rate"
                android:layout_width="@dimen/about_icon_size"
                android:layout_height="@dimen/about_icon_size"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/rate"
                android:scaleType="centerInside"
                android:src="@android:drawable/star_big_on" />

            <ImageButton
                android:id="@+id/about_report"
                android:layout_width="@dimen/about_icon_size"
                android:layout_height="@dimen/about_icon_size"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/about_report"
                android:scaleType="centerInside"
                android:src="@drawable/bug" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/about_description"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/about_version"
            android:textColor="@color/colorPrimaryText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/about_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_author"
                android:textColor="@color/colorPrimaryText" />

            <TextView
                android:id="@+id/about_author_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text="@string/about_developer_link" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/gray_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/about_attributions"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.roughike.swipeselector.SwipeSelector
                    android:id="@+id/swipe_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:linksClickable="true"
                    app:swipe_descriptionTextAppearance="@style/SwipeDescriptionTextAppearance"
                    app:swipe_indicatorActiveColor="@color/colorAccent"
                    app:swipe_titleTextAppearance="@style/SwipeTitleTextAppearance" />
            </ScrollView>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/gray_line" />

        <Button
            android:id="@+id/about_licenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/about_licenses" />
    </LinearLayout>
</LinearLayout>
