<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_developer_link" translatable="false"><a href="https://termian.dev/">Damian Terlecki</a></string>
    <string name="about_report_link" translatable="false">https://github.com/t3rmian/PBMap/issues</string>
    <string name="about_project_link" translatable="false">https://pbmap.termian.dev/</string>
</resources>