<?xml version="1.0" encoding="utf-8"?>
<io.github.t3r1jj.pbmap.about.LollipopFixedWebView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_licenses"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />