<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation,TypographyDashes" >
    <string name="name_acs">Academic\nSports\nCentre\n[ACS]</string>
    <string name="name_pb_acs">Sports Centre [ACS]</string>
    <string name="name_pb_acs_l2">Academic Sports Centre L1 [ACS]</string>
    <string name="name_cnk">Modern\nEducational\nCentre\n[CNK]</string>
    <string name="name_pb_cnk">Modern Ed. C. [CNK]</string>
    <string name="name_pb_cnk_l2">Modern Ed. Centre L1 [CNK]</string>
    <string name="name_pb_cnk_l3">Modern Ed. Centre L2 [CNK]</string>
    <string name="name_pb_wa">Architecture [WA]</string>
    <string name="name_pb_wa_l0">Architecture L-1 [WA]</string>
    <string name="name_pb_wa_l2">Architecture L1 [WA]</string>
...
    <string name="name_pb_wb_l3_iet">CE/ES IET L2 [WB]</string>
    <string name="name_pb_wb_l4_iet">CE/ES IET L3 [WB]</string>
    <string name="name_pb_we">EE\n[WE]\n</string>
    <string name="name_pb_we_l2">EE L1 [WE]</string>
    <string name="name_pb_we_l3">EE L2 [WE]</string>
    <string name="name_pb_we_l4">EE L3 [WE]</string>
    <string name="name_pb_wi">CS\n[WI]</string>
    <string name="name_pb_wi_l0">CS L0 [WI]</string>
    <string name="name_pb_wi_l2">CS L1 [WI]</string>
    <string name="name_pb_wi_l3">CS L2 [WI]</string>
    <string name="name_pb_wm">ME\n[WM]</string>
    <string name="name_pb_wm_l2">ME L1 [WM]</string>
    <string name="name_pb_wm_l3">ME L2 [WM]</string>
    <string name="name_pb_zwl">Forestry [ZWL]</string>
    <string name="name_pb_zwl_l2">Forestry L1 [ZWL]</string>
    <string name="name_pb_wz_montreal">EM Montreal [WZ]</string>
    <string name="name_pb_wz_berlin">EM Berlin [WZ]</string>
    <string name="name_pb_wz_berlin_l2">EM Berlin L1 [WZ]</string>
...
    <string name="name_silent_zone">Silent room</string>
    <string name="name_wc">WC</string>
    <string name="name_zpdiut">ZPDiUT</string>
    <string name="name_deanery_121">Deanery 121</string>
    <string name="name_deanery">Deanery</string>
    <string name="name_secretariat">Secretariat</string>
    <string name="name_pb_campus">BUT Campus</string>
    <string name="name_rector">Rector\'s office</string>
    <string name="name_lodge">Lodge</string>
    <string name="name_courts">Tennis\ncourts</string>
    <string name="name_ds_alpha">Alpha\nDorm</string>
    <string name="name_ds_beta">Beta\nDorm</string>
    <string name="name_ds_gamma">Gamma\nDorm</string>
...
    <string name="name_information_publishers_reading_room">Information publishers\nreading room</string>
    <string name="name_magazines_reading_room">Magazines\nreading room</string>
    <string name="name_electronic_reading_room">Electronic\nreading room</string>
    <string name="name_informatorium">Informatorium</string>
    <string name="name_book_rental">Book loan</string>
    <string name="name_book_return">Self-service\nbook return</string>
    <string name="name_main_library">BUT Main\nLibrary</string>
    <string name="name_sjo">Foreign Language Centre</string>
    <string name="name_ckz">Remote Education Centre</string>
    <string name="name_assembly_hall_i">Assembly\nhall I</string>
    <string name="name_assembly_hall_ii">Assembly\nhall II</string>
    <string name="name_assembly_hall_iii">Assembly\nhall III</string>
    <string name="name_gym">Gym</string>
...
    <string name="name_photodetection_and_computer_image_analysis_lab">Photodetection and computer\nimage analysis lab</string>
    <string name="name_forest_by_products_lab">Forest\nby-products lab</string>
    <string name="name_assembly_hall">Assembly\nhall</string>
    <string name="name_cnb">Scientific-Research\nCentre</string>
    <string name="name_faculty_council_hall">Faculty council\nhall</string>
    <string name="name_hall">Hall</string>
    <string name="name_library">Library</string>
    <string name="name_student_council">Student council</string>
    <string name="name_054_058_wc">054-058 WC</string>

    <string name="address_pb_campus">Bialystok University of Technology,
Wiejska 45A St., 15-351 Bialystok, voi. podlaskie,
REGON: 000001672 NIP: 5420208721,
...
