<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name_app">PBMap</string>
    <string name="action_back">Previous map</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Hint: [WB], 116@wi,…</string>
    <string name="not_found">Place not found</string>
    <string name="about">About</string>
    <string name="action_share">Share with</string>
    <string name="rate">Rate</string>
    <string name="about_description">PBMap is an interactive map of Bialystok University of Technology designed in order to facilitate navigation and locating objects on polytechnic.</string>
    <string name="about_author">Author:\u0020</string>
    <string name="about_version">Version: %1$s</string>
...
